# Research-Navigator

./: .deepsource.toml  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml  tach.toml
.github/workflows/: docker-image.yml  greetings.yml  makefile.yml  publish-docker.yml  stale.yml
app/: config.py  main.py  models.py  routers.py  schemas.py  utils.py
app/crew/: agents.py  callbacks.py  crew.py  tasks.py  tools.py
app/temp/: README.md  qdrant_search_tool.py  tavily_extractor_tool.py  tavily_search_tool.py
