[project]
name = "research_navigator"
version = "0.1.0"
description = "Research-Navigator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "fastapi[standard]>=0.115.12",
    "langsmith>=0.3.24",
]

[project.scripts]
research_navigator = "research_navigator.main:run"
run_crew = "research_navigator.main:run"
train = "research_navigator.main:train"
replay = "research_navigator.main:replay"
test = "research_navigator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
packages = ["app"]

[tool.crewai]
type = "crew"
